# genetic-algorithm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
genetic_algorithm/: README.md  __init__.py
genetic_algorithm/examples/: elitism_example.py  mutation_example.py  plotting_example.py  roulette_example.py  simple_example.py
genetic_algorithm/src/core/: genetic_algorithm.py  genomes.py  selection.py
genetic_algorithm/src/utils/: config_validation.py  visualization.py
