[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-algorithm"
version = "1.0.0"
description = "A clean, professional genetic algorithm implementation for real-valued optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rafael", email = "your.email@example.com"}
]
keywords = ["genetic-algorithm", "optimization", "evolution", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "numpy>=1.20.0,<3.0.0",      # Stable API, avoid NumPy 3.x breaking changes
    "matplotlib>=3.5.0,<4.0.0",  # Mature plotting API, block major version bumps
    "tqdm>=4.60.0,<5.0.0"        # Progress bars - simple, stable API
]
requires-python = ">=3.8,<4.0"   # Python 3.8+ support, block Python 4.x when it comes

[project.optional-dependencies]
dev = [
    "pytest>=6.0,<8.0",
    "pytest-cov>=3.0,<5.0", 
    "black>=22.0,<25.0",
    "flake8>=4.0,<7.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["genetic_algorithm*"]
